[package]
name = "vhost-user-rpmb"
version = "0.1.0"
authors = ["Alex Bennée <alex.bennee@linaro.org>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3",  features = ["yaml"] }
memmap = "0.6.2"
epoll = ">=4.0.1"
log = "0.4.6"
vm-memory = ">=0.3.0"
vmm-sys-util = ">=0.8.0"
vhost = { git = "https://github.com/rust-vmm/vhost", features = ["vhost-user-slave"] }
vhost-user-backend = { git = "https://github.com/rust-vmm/vhost-user-backend" }
virtio-bindings = ">=0.1"
arrayvec = "0.7.1"
